@@ -237,6 +237,7 @@
 #endif
 
 #if PLATFORM(MAC) || PLATFORM(WIN)
+#define ENABLE_DASHBOARD_SUPPORT 1
 #define HAVE_ACCESSIBILITY 1
 #endif
 
@@ -263,7 +264,7 @@
 #endif
 
 #if !defined(ENABLE_DASHBOARD_SUPPORT)
-#define ENABLE_DASHBOARD_SUPPORT 1
+#define ENABLE_DASHBOARD_SUPPORT 0
 #endif
 
 #endif /* WTF_Platform_h */
