@@ -1,3 +1,9 @@
+2008-04-29  David Kilzer  <ddkilzer@apple.com>
+
+        BUILD FIX for ENABLE(DASHBOARD_SUPPORT)
+
+        * configure.ac: Added conditional for ENABLE_DASHBOARD_SUPPORT.
+
 2008-04-22  Alp Toker  <alp@nuanti.com>
 
         GTK+ debug build fix for changes in r32257.
